@@ -42,4 +42,17 @@ public class ArtepoCopyIntegrationTest extends IntegrationTestBase {
         List<String> paths = util.listDirPaths(fooPromotion.repoPath.child(String.valueOf(build.getNumber())));
         assertThat(paths, containsInAnyOrder("a.txt", "b.txt"));
     }
+
+    public void testCopyGeneratesLogs() throws Exception {
+        FreeStyleProject project = createProjectWithBuilder("a.txt", "b.txt");
+        CreatedArtepo mainArtepo = createMainArtepo(project);
+
+        // run & automatically self promote build
+        FreeStyleBuild build = build(project);
+
+        // verify copied paths after build
+        String log = build.getLog();
+        assertThat(log, RegularExpressionMatcher.matchesPattern("(?mi)^Sync .* to .* using pattern .*$"));
+    }
+
 }
